# dioxus_file_picker

./: Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
dioxus_file_picker/: Cargo.toml  Dioxus.toml  package-lock.json
dioxus_file_picker/assets/: fallback_file_picker.css  tailwind.css
dioxus_file_picker/src/: cross_platform.rs  fallback_file_picker.rs  file_picker.rs  file_picker_launcher.rs  launcher.rs  lib.rs  native.rs  overlay.rs  virtual_paths.rs
example/: .gitignore  Cargo.toml
example/src/: main.rs
