[package]
name = "dioxus_file_picker"
description = "A file picker for dioxus"
version = "0.1.0"
authors = ["mcmah309 <dillonmcmahon79@gmail.com>"]
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = [] }
# exact_format = "0.2"

[features]
default = []
cross_native = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3"
uuid = { version = "1", features = ["v7", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { version = "0.15" }
