[package]
name = "dioxus_file_picker"
description = "A file picker for dioxus"
version = "0.1.0"
authors = ["mcmah309 <dillonmcmahon79@gmail.com>"]
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = [] }

[features]
default = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3"
uuid = { version = "1", features = ["v7", "js"] }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
rfd = { version = "0.15", default-features = false, features = [
    "xdg-portal",
    "tokio",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["fs"] }
